修复SMTP的更新接口测试
