# internal/routers/api/stmp.go
@@ -82,7 +82,8 @@ func (r Smtp) Delete(c *gin.Context) {
 // @Param isSSL body bool false "是否使用SSL加密"
 // @Param userName body string false "SMTP登录名"
 // @Param password body string false "SMTP密码"
-// @Param form body string false "发送邮箱地址"// @Param 测试 body request.UpdateSmtpRequest true "更新SMTP邮箱测试"
+// @Param form body string false "发送邮箱地址"
+// @Param 测试 body request.UpdateSmtpRequest true "更新SMTP邮箱测试"
 // @Success 200 {string} string "更新成功"
 // @Failure 400 {object} errcode.Error "请求错误"
 // @Failure 500 {object} errcode.Error "内部错误"
